--- a/website/i18n/fr/docusaurus-plugin-content-blog-newsletter/146/index.mdx
+++ b/website/i18n/fr/docusaurus-plugin-content-blog-newsletter/146/index.mdx
@@ -1,15 +1,14 @@
 ---
 slug: /146
-title: "React Hebdo #146: Next.js, Concurrency, Server Components, React-Query, Apollo, Remix, Expo Router, Skia, React-Native, Remotion, Flashlight..."
+title: "React Hebdo #146: Next.js, Concurrency, Server Components, JSX, TV, React-Query, Apollo, Remix, Expo Router, Skia, React-Native, Remotion, Flashlight, INP, Bun..."
 authors: [slorber]
 date: 05-23-2023
 image: /img/TWIR_POST.png
-unlisted: true
 ---
 
 Salut à tous !
 
-On se retrouve avec 2 semaines de news React. Il y a pas mal de bons articles React, et aussi des annonces React-Native très intéressantes liées aux conférences qui ont eu lieu récemment. C'est la saison des conférences 😄 Entre Remix Conf, App.js, Chain React... difficile de tout suivre, sans compter React-Native-Connection et React Summit la semaine prochaine!
+On se retrouve avec 2 semaines de news React. Il y a pas mal de bons articles React, et aussi des annonces React-Native très intéressantes liées aux conférences qui ont eu lieu récemment. Entre Remix Conf, App.js, Chain React... difficile de tout suivre, sans compter React-Native-Connection et React Summit la semaine prochaine!
 
 Les librairies de data fetching comme React-Query et Apollo se posent la question de leur intégration avec les Server Components et Next.js App Router. On commence à y voir plus clair.
 
