--- a/website/newsletter/146/index.mdx
+++ b/website/newsletter/146/index.mdx
@@ -1,6 +1,6 @@
 ---
 slug: /146
-title: "This Week In React #146: Next.js, Concurrency, Server Components, JSX, TV, React-Query, Apollo, Remix, Expo Router, Skia, React-Native, Remotion, Flashlight, INP, Bun..."
+title: "This Week In React #146: Concurrency, Server Components, JSX, TV, Next.js, React-Query, Apollo, Remix, Expo Router, Skia, React-Native, Remotion, Flashlight, INP, Bun..."
 authors: [slorber]
 date: 05-23-2023
 image: /img/TWIR_POST.png
