--- a/website/i18n/fr/docusaurus-plugin-content-blog-newsletter/147/index.mdx
+++ b/website/i18n/fr/docusaurus-plugin-content-blog-newsletter/147/index.mdx
@@ -45,7 +45,7 @@ Prêt à être utilisé avec **TypeScript**, **NextJS**, Chakra UI, TanStack Que
 
 <Todo />
 
-<SubscribeFormEmbed />
+<SubscribeFormEmbed placement="middle" />
 
 ---
 
