--- a/website/i18n/fr/docusaurus-plugin-content-blog-newsletter/_support.mdx
+++ b/website/i18n/fr/docusaurus-plugin-content-blog-newsletter/_support.mdx
@@ -6,4 +6,4 @@
 - 📨 Réponds à cet [**email**](mailto:sebastien@thisweekinreact.com)
 - 💬 Rejoins le [**chat Discord**](https://thisweekinreact.com/discord)
 
-<SubscribeFormEmbed />
+<SubscribeFormEmbed placement="top" />
