--- a/website/newsletter/147/index.mdx
+++ b/website/newsletter/147/index.mdx
@@ -43,7 +43,7 @@ Ready to use with **TypeScript**, **NextJS**, Chakra UI, TanStack Query, Storybo
 
 <Todo />
 
-<SubscribeFormEmbed />
+<SubscribeFormEmbed placement="middle" />
 
 ---
 
