--- a/website/newsletter/146/index.mdx
+++ b/website/newsletter/146/index.mdx
@@ -95,7 +95,7 @@ Spotify explains how they develop their apps for TV and consoles based on hybrid
 - 📦 [React-Three-Fiber Ultimate Lens Flare](https://twitter.com/Andersonmancini/status/1660625053497839622)
 - 👥 [React Summit](https://reactsummit.com/?utm_source=email&utm_medium=thisweekinreact) (Amsterdam, June 2-6) is offering us -5% on tickets (code "ThisWeekInReact5") and -10% on [workshops](https://reactsummit.com/react-workshops) (code "THISWEEKINREACT")
 
-<SubscribeFormEmbed />
+<SubscribeFormEmbed placement="middle" />
 
 ---
 
