--- a/website/newsletter/_support.mdx
+++ b/website/newsletter/_support.mdx
@@ -1,9 +1,7 @@
-
 **To support me:**
 
 - 😘 **Recommend the newsletter to your friends**: it really helps!
-- 💸 [**Sponsor the newsletter**](https://thisweekinreact.com/sponsor) or [**sponsor me**](https://github.com/sponsors/slorber)
+- 💸 [**Sponsor the newsletter**](https://thisweekinreact.com/sponsor)
 - 🧵 [**Retweet the latest Twitter thread**](https://slo.im/thread)
-- 📨 Reply to this [**email**](mailto:sebastien@thisweekinreact.com): feedback is welcome
 
-<SubscribeFormEmbed />
+<SubscribeFormEmbed placement="top" />
